--- a/app/src/main/res/layout/cell_bus_route.xml
+++ b/app/src/main/res/layout/cell_bus_route.xml
@@ -34,8 +34,8 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading_view"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/lottie_loading_view_size"
+            android:layout_height="@dimen/lottie_loading_view_size"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
