--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,6 +32,8 @@
 
     <dimen name="card_corner_radius">2dp</dimen>
 
+    <dimen name="lottie_loading_view_size">40dp</dimen>
+
     <dimen name="text_title">20sp</dimen>
     <dimen name="text_small">14sp</dimen>
     <dimen name="text_bus_route_mini">14sp</dimen>
