* “My location” button always pans camera to user’s location, but doesn’t fetch nearby stops. Only tapping on the “search stops” button will do this. * Added a bottom padding to the map so that the camera origin is actually centred. Not super happy with this solution though.

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,7 +3,7 @@
     <integer name="default_map_search_radius">200</integer>
 
     <integer name="default_city_wide_map_zoom">11</integer>
-    <integer name="map_cover_image_zoom">18</integer>
+    <integer name="default_my_location_map_zoom">16</integer>
 
     <integer name="max_relative_minutes">20</integer>
     <integer name="search_area_marker_delay_millis">25</integer>
