--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,24 @@
                 android:layout_height="match_parent"
                 tools:context="jessevivanco.com.pegcitytransit.ui.activities.MainActivity"/>
 
+            <!-- NOTE: We're programmatically setting this view's bottom margin. -->
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/search_bus_stops_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/top_fab_margin_bottom_gps_enabled"
+                android:layout_marginEnd="@dimen/material_spacing_medium"
+                android:layout_marginRight="@dimen/material_spacing_medium"
+                app:layout_anchor="@id/map_fragment_container"
+                app:layout_anchorGravity="bottom|right|end"
+                app:srcCompat="@drawable/ic_search_white_24dp"/>
+
             <!-- This button is hidden until we have access to the user's location. -->
-            <!-- NOTE: Bottom margin = fab_height + material_spacing_medium -->
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/my_location_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="88dp"
+                android:layout_marginBottom="@dimen/material_spacing_medium"
                 android:layout_marginEnd="@dimen/material_spacing_medium"
                 android:layout_marginRight="@dimen/material_spacing_medium"
                 android:visibility="gone"
@@ -47,17 +58,6 @@
                 app:layout_anchor="@id/map_fragment_container"
                 app:layout_anchorGravity="bottom|right|end"
                 app:srcCompat="@drawable/ic_my_location_grey_800_24dp"/>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/search_bus_stops_fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/material_spacing_medium"
-                android:layout_marginEnd="@dimen/material_spacing_medium"
-                android:layout_marginRight="@dimen/material_spacing_medium"
-                app:layout_anchor="@id/map_fragment_container"
-                app:layout_anchorGravity="bottom|right|end"
-                app:srcCompat="@drawable/ic_search_white_24dp"/>
 
         </android.support.design.widget.CoordinatorLayout>
 
