--- a/app/src/main/res/layout/dialog_bus_routes.xml
+++ b/app/src/main/res/layout/dialog_bus_routes.xml
@@ -61,6 +61,7 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/material_spacing_medium"
         android:indeterminate="true"/>
 
     <android.support.v7.widget.RecyclerView
