--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <dimen name="lottie_loading_view_size">40dp</dimen>
 
     <dimen name="text_title">20sp</dimen>
+    <dimen name="text_medium">17sp</dimen>
     <dimen name="text_small">14sp</dimen>
     <dimen name="text_bus_route_mini">14sp</dimen>
     <dimen name="text_bus_route_large">32sp</dimen>
