--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,15 @@
                 app:layout_anchorGravity="bottom|right|end"
                 app:srcCompat="@drawable/ic_my_location_grey_800_24dp"/>
 
+            <ProgressBar
+                android:id="@+id/map_loading_indicator"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_gravity="bottom"
+                android:indeterminate="true"/>
+
         </android.support.design.widget.CoordinatorLayout>
 
         <android.support.design.widget.BottomNavigationView
