* Added fav icon to info window if stop is a favourite. * New color theme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,12 +64,13 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:layout_gravity="bottom"
-                android:indeterminate="true"/>
+                android:indeterminate="true"
+                android:visibility="gone"/>
 
         </android.support.design.widget.CoordinatorLayout>
 
+        <!-- TODO STYLE -->
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/tab_navigation"
             android:layout_width="match_parent"
