--- a/app/src/main/res/layout/cell_scheduled_stop.xml
+++ b/app/src/main/res/layout/cell_scheduled_stop.xml
@@ -44,7 +44,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/stroke_width"
-            android:background="@color/grey"/>
+            android:background="@color/divider"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
