--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorAccent">#40c4ff</color>
+    <color name="colorPrimaryLight">#B2DFDB</color>
 
     <color name="button">@color/colorAccent</color>
     <color name="button_pressed_prelollipop">#b94141</color>
@@ -10,19 +11,22 @@
 
     <color name="white">#FFFFFF</color>
     <color name="white_transparent_75">#40ffffff</color>
-    <color name="black_translucent">#40000000</color>
     <color name="black">#000000</color>
 
     <color name="grey_light">#F7F7F6</color>
-    <color name="grey">#C9CBCE</color>
-    <color name="text_grey">#5E656D</color>
-
+    <color name="divider">#BDBDBD</color>
     <color name="list_background">@color/white</color>
+
+    <color name="star">#FFC107</color>
 
     <color name="spirit_route">#008000</color>
     <color name="normal_route">@color/white</color>
     <color name="express_route">#ffff00</color>
     <color name="rapid_transit_route">#0072b9</color>
-    <color name="map_search_border">#553F51B5</color>
+
+    <color name="search_circle">#5500796B</color>
+
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
 
 </resources>
