--- a/app/src/main/res/layout/cell_loading_indicator.xml
+++ b/app/src/main/res/layout/cell_loading_indicator.xml
@@ -13,6 +13,7 @@
         android:layout_width="@dimen/lottie_loading_view_size"
         android:layout_height="@dimen/lottie_loading_view_size"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         app:lottie_autoPlay="true"
         app:lottie_fileName="loading.json"
         app:lottie_loop="true"/>
