--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,15 +70,14 @@
 
         </android.support.design.widget.CoordinatorLayout>
 
-        <!-- TODO STYLE -->
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/tab_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:itemBackground="@color/colorPrimary"
-            app:itemIconTint="@color/white"
-            app:itemTextColor="@color/white"
+            android:background="@color/colorPrimary"
+            app:itemIconTint="@color/bottom_nav_text"
+            app:itemTextColor="@color/bottom_nav_text"
             app:menu="@menu/navigation"/>
 
     </RelativeLayout>
