* Added animation library -> animating recycler view cells being populated. * Ensuring we only run the animations when the recycler view’s list gets set on the adapter. Any time a new cell is inflated, that would’ve invoked another animation.

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -7,4 +7,7 @@
 
     <integer name="max_relative_minutes">20</integer>
     <integer name="search_area_marker_delay_millis">25</integer>
+
+    <integer name="recycler_view_animation_inter_object_delay_millis">50</integer>
+    <integer name="recycler_view_animation_duration_millis">500</integer>
 </resources>
