--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,4 +48,11 @@
         <item name="android:textSize">@dimen/text_title</item>
     </style>
 
+    <style name="settings_card">
+        <item name="android:paddingLeft">@dimen/material_spacing_medium</item>
+        <item name="android:paddingRight">@dimen/material_spacing_medium</item>
+        <item name="android:paddingTop">@dimen/material_spacing_small</item>
+        <item name="android:paddingBottom">@dimen/material_spacing_small</item>
+    </style>
+
 </resources>
