--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -58,112 +58,113 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <!-- TODO add animated logo -->
-
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/material_spacing_small"
-            app:cardCornerRadius="@dimen/card_corner_radius">
+            android:orientation="vertical">
 
-            <RelativeLayout
-                style="@style/settings_card"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    fontPath="fonts/bariol_bold.ttf"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/use_military_time"
-                    android:textSize="@dimen/text_medium"/>
-
-                <Switch
-                    android:id="@+id/use_military_time_switch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"/>
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/material_spacing_small"
-            android:layout_marginLeft="@dimen/material_spacing_small"
-            android:layout_marginRight="@dimen/material_spacing_small"
-            app:cardCornerRadius="@dimen/card_corner_radius">
-
-            <LinearLayout
-                style="@style/settings_card"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="@dimen/material_spacing_small"
+                app:cardCornerRadius="@dimen/card_corner_radius">
 
-                <TextView
+                <RelativeLayout
+                    style="@style/settings_card"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/send_feedback_blurb"
-                    android:textSize="@dimen/text_medium"/>
+                    android:layout_height="wrap_content">
 
-                <Button
-                    style="@style/button"
-                    fontPath="fonts/bariol_bold.ttf"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/material_spacing_small"
-                    android:text="@string/send_feedback"
-                    android:textSize="@dimen/text_medium"/>
+                    <TextView
+                        fontPath="fonts/bariol_bold.ttf"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:text="@string/use_24_hour_time"
+                        android:textSize="@dimen/text_medium"/>
 
-            </LinearLayout>
+                    <Switch
+                        android:id="@+id/use_24_hour_time_switch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"/>
 
-        </android.support.v7.widget.CardView>
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/material_spacing_small"
-            android:layout_marginLeft="@dimen/material_spacing_small"
-            android:layout_marginRight="@dimen/material_spacing_small"
-            app:cardCornerRadius="@dimen/card_corner_radius">
-
-            <LinearLayout
-                style="@style/settings_card"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="@dimen/material_spacing_small"
+                android:layout_marginLeft="@dimen/material_spacing_small"
+                android:layout_marginRight="@dimen/material_spacing_small"
+                app:cardCornerRadius="@dimen/card_corner_radius">
 
-                <TextView
+                <LinearLayout
+                    style="@style/settings_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/rate_blurb"
-                    android:textSize="@dimen/text_medium"/>
+                    android:orientation="vertical">
 
-                <Button
-                    style="@style/button"
-                    fontPath="fonts/bariol_bold.ttf"
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/send_feedback_blurb"
+                        android:textSize="@dimen/text_medium"/>
+
+                    <Button
+                        style="@style/button"
+                        fontPath="fonts/bariol_bold.ttf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/material_spacing_small"
+                        android:text="@string/send_feedback"
+                        android:textSize="@dimen/text_medium"/>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/material_spacing_small"
+                android:layout_marginLeft="@dimen/material_spacing_small"
+                android:layout_marginRight="@dimen/material_spacing_small"
+                app:cardCornerRadius="@dimen/card_corner_radius">
+
+                <LinearLayout
+                    style="@style/settings_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/material_spacing_small"
-                    android:text="@string/rate_app"
-                    android:textSize="@dimen/text_medium"/>
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rate_blurb"
+                        android:textSize="@dimen/text_medium"/>
 
-        </android.support.v7.widget.CardView>
+                    <Button
+                        style="@style/button"
+                        fontPath="fonts/bariol_bold.ttf"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/material_spacing_small"
+                        android:text="@string/rate_app"
+                        android:textSize="@dimen/text_medium"/>
 
-    </LinearLayout>
+                </LinearLayout>
 
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
