* Made bottom sheet titles bold and added material icons.

--- a/app/src/main/res/layout/dialog_bus_routes.xml
+++ b/app/src/main/res/layout/dialog_bus_routes.xml
@@ -38,8 +38,9 @@
                     android:layout_centerVertical="true"
                     android:text="{md-close}"/>
 
-                <TextView
+                <com.joanzapata.iconify.widget.IconTextView
                     style="@style/toolbar_title"
+                    fontPath="fonts/bariol_bold.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/material_spacing_medium"
