--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -74,30 +74,45 @@
                 android:layout_margin="@dimen/material_spacing_small"
                 app:cardCornerRadius="@dimen/card_corner_radius">
 
-                <RelativeLayout
+                <LinearLayout
                     style="@style/settings_card"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/stop_schedules_title"
                         fontPath="fonts/bariol_bold.ttf"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:text="@string/use_24_hour_time"
+                        android:text="@string/bus_stop_schedules"
                         android:textSize="@dimen/text_medium"/>
 
-                    <Switch
-                        android:id="@+id/use_24_hour_time_switch"
-                        android:layout_width="wrap_content"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"/>
+                        android:layout_marginTop="@dimen/material_spacing_small">
 
-                </RelativeLayout>
+                        <TextView
+                            android:id="@+id/stop_schedules_subtitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:text="@string/use_24_hour_time"
+                            android:textSize="@dimen/text_medium"/>
+
+                        <Switch
+                            android:id="@+id/use_24_hour_time_switch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"/>
+
+                    </RelativeLayout>
+                </LinearLayout>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
@@ -121,9 +136,9 @@
                         android:textSize="@dimen/text_medium"/>
 
                     <Button
+                        android:id="@+id/report_issue_button"
                         style="@style/button"
                         fontPath="fonts/bariol_bold.ttf"
-                        android:id="@+id/report_issue_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/material_spacing_small"
@@ -155,9 +170,9 @@
                         android:textSize="@dimen/text_medium"/>
 
                     <Button
+                        android:id="@+id/rate_app_button"
                         style="@style/button"
                         fontPath="fonts/bariol_bold.ttf"
-                        android:id="@+id/rate_app_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/material_spacing_small"
