* Removed error and loading states from adapters. That logic is now handled by presenters. Each view contains a loading and error view rather than those view showing up as part of an recycler view adapter.

--- a/app/src/main/res/layout/dialog_bus_routes.xml
+++ b/app/src/main/res/layout/dialog_bus_routes.xml
@@ -70,4 +70,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <jessevivanco.com.pegcitytransit.ui.views.ErrorStateCell
+        android:id="@+id/error_state_cell"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <include
+        layout="@layout/view_loading_indicator"
+        android:visibility="gone"/>
+
 </LinearLayout>
