--- a/app/src/main/res/layout/cell_no_results.xml
+++ b/app/src/main/res/layout/cell_no_results.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="@dimen/material_spacing_medium"
     tools:ignore="MissingPrefix">
 
@@ -31,4 +28,4 @@
         android:text="@string/try_again"
         android:textSize="@dimen/text_medium"/>
 
-</RelativeLayout>
+</merge>
