* Added text colours for EARLY and LATE scheduled stops.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,9 @@
 
     <color name="star">#FFC107</color>
 
+    <color name="early">#4CAF50</color>
+    <color name="late">#F44336</color>
+
     <color name="spirit_route">#008000</color>
     <color name="normal_route">@color/white</color>
     <color name="express_route">#ffff00</color>
