* Changed the maps bottom progress bar color (the blue color blended in too much).

--- a/app/src/main/res/layout/view_bottom_sheet_schedule.xml
+++ b/app/src/main/res/layout/view_bottom_sheet_schedule.xml
@@ -81,7 +81,8 @@
             android:layout_height="wrap_content"
             android:visibility="gone"/>
 
-        <include layout="@layout/view_loading_indicator"
+        <include
+            layout="@layout/view_loading_indicator"
             android:visibility="gone"/>
 
     </LinearLayout>
