--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
 
             <ProgressBar
                 android:id="@+id/map_loading_indicator"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                style="@style/secondary_horizontal_progress_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
