--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="secondary_horizontal_progress_bar" parent="Widget.AppCompat.ProgressBar.Horizontal"/>
+
     <style name="container_content" parent="android:Widget">
         <item name="android:paddingLeft">@dimen/material_spacing_medium</item>
         <item name="android:paddingRight">@dimen/material_spacing_medium</item>
