--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -81,6 +81,53 @@
                     android:orientation="vertical">
 
                     <TextView
+                        fontPath="fonts/bariol_bold.ttf"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/map"
+                        android:textSize="@dimen/text_medium"/>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/material_spacing_small">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:text="@string/search_radius"
+                            android:textSize="@dimen/text_medium"/>
+
+                        <Spinner
+                            android:id="@+id/search_radius_spinner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"/>
+
+                    </RelativeLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/material_spacing_small"
+                android:layout_marginLeft="@dimen/material_spacing_small"
+                android:layout_marginRight="@dimen/material_spacing_small"
+                app:cardCornerRadius="@dimen/card_corner_radius">
+
+                <LinearLayout
+                    style="@style/settings_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
                         android:id="@+id/stop_schedules_title"
                         fontPath="fonts/bariol_bold.ttf"
                         android:layout_width="wrap_content"
