--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,9 +19,10 @@
     <dimen name="material_spacing_small">8dp</dimen>
     <dimen name="material_spacing_x_small">4dp</dimen>
 
+    <dimen name="fav_button_size">56dp</dimen>
     <dimen name="bottom_nav_height">56dp</dimen>
-
     <dimen name="fab_size">56dp</dimen>
+
     <dimen name="top_fab_margin_bottom_gps_enabled">88dp</dimen>
     <dimen name="top_fab_margin_bottom_gps_disabled">@dimen/material_spacing_medium</dimen>
 
