--- a/app/src/main/res/layout/view_bottom_sheet_schedule.xml
+++ b/app/src/main/res/layout/view_bottom_sheet_schedule.xml
@@ -48,6 +48,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:textColor="@color/colorPrimaryLight"
                 android:text="{md-refresh}"/>
 
             <TextView
