--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,12 @@
     <dimen name="material_spacing_small">8dp</dimen>
     <dimen name="material_spacing_x_small">4dp</dimen>
 
+    <dimen name="bus_route_cell_height">56dp</dimen>
+
+    <!-- FYI: Only applies in MainActivity -->
+    <!-- (bus_route_cell_height (56dp) + bus_route_cell_height (8dp) ) = 64dp  -->
+    <dimen name="map_padding_top_offset">64dp</dimen>
+
     <dimen name="fav_button_size">56dp</dimen>
     <dimen name="bottom_nav_height">56dp</dimen>
     <dimen name="fab_size">56dp</dimen>
