--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             <jessevivanco.com.pegcitytransit.ui.views.BusRouteCell
                 android:id="@+id/bus_route_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/bus_route_cell_height"
                 android:layout_margin="@dimen/material_spacing_small"
                 android:visibility="gone"/>
 
