--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -9,4 +9,6 @@
     <integer name="search_area_marker_delay_millis">25</integer>
 
     <integer name="recycler_view_animation_duration_millis">500</integer>
+
+    <integer name="reset_bearing_duration_millis">250</integer>
 </resources>
