* Plugged logic for bus stop search.

--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -75,7 +75,8 @@
             android:minHeight="0dp"
             android:minWidth="0dp"
             android:text="{md-close}"
-            android:textSize="@dimen/text_title"
+            android:textColor="?android:textColorHint"
+            android:textSize="28sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
