--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -41,7 +41,7 @@
             android:gravity="center_vertical"
             android:hint="@string/stop_search_hint"
             android:imeOptions="actionSearch|flagNoExtractUi"
-            android:inputType="textNoSuggestions"
+            android:inputType="text"
             android:maxLines="1"
             android:paddingEnd="@dimen/material_spacing_small"
             android:paddingLeft="@dimen/material_spacing_small"
