--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -7,6 +7,7 @@
 
     <integer name="max_relative_minutes">20</integer>
     <integer name="search_area_marker_delay_millis">25</integer>
+    <integer name="max_markers_with_delay">15</integer>
 
     <integer name="recycler_view_animation_duration_millis">500</integer>
 
