* Fixed an issue with the routes modal. * Hiding the crosshair overlay when not in search mode * Clearing markers when switching to search tab. * Reduced the text size of the search and bus route cell (empty state)

--- a/app/src/main/res/layout/cell_bus_route.xml
+++ b/app/src/main/res/layout/cell_bus_route.xml
@@ -46,7 +46,7 @@
             android:paddingStart="@dimen/material_spacing_medium"
             android:text="@string/bus_route_empty_state"
             android:textColor="?android:textColorHint"
-            android:textSize="@dimen/text_title"
+            android:textSize="@dimen/text_medium"
             android:visibility="gone"
             tools:ignore="MissingPrefix"/>
 
